# plan-finder

./: LICENSE  README.md  plan-finder-daemon.sh  pyproject.toml
src/plan_finder/: cli.py  discovery.py  display.py  engine.py  models.py  preset.py  prompts.py  reporter.py  state.py  throttle.py
src/plan_finder/presets/: unity.md
